@@ -1,6 +1,8 @@
 Changes 0.9.6.1 -> 
-* I a peer accepted the connection, but never replied to CER, then a
+* If a peer accepted the connection, but never replied to CER, then a
   ConcurrentModificationException was thrown when the connection timed out.
+* Local connections on Solaris lead to corner case where NIO behaves
+  interestingly and the stack became non-functional.
 
 Changes 0.9.6 -> 0.9.6.1
 * File descriptor leak when a persistent peer had a name that could not be
